CHANGES
=======

* update prod github action yaml
* update prod github action yaml
* update prod github action yaml
* update prod github action yaml
* update prod github action yaml
* update prod github action yaml
* update prod github action yaml
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* add sphinx build github action
* dataset and vision id's merged with paths, dataset profiles removed, documentation formatting
* add docs
* add docs
* add docs
* WIP: docker test image
* WIP: docker test image
* add pbr
* WIP: docker test image
* WIP: docker test image
* WIP: docker test image
* WIP: docker test image
* WIP: point to test docker container
* add pbr
* WIP: add repo secrets

2021.8.1
--------

* WIP: add repo secrets
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* rebase on main
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup
* WIP: cleanup