@@ -58,3 +58,16 @@ jobs:
           branch: ${{ github.ref }}
           directory: docs
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  twine:
+    runs-on: ubuntu-latest
+    container: jhurdle/divina:test
+    steps:
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Test pypi
+        run: |
+          python3 setup.py sdist bsdist_wheel
+          twin check dist/*
