@@ -1,3 +1,4 @@
+GitHub Action <action@github.com>
 John <johnhurdle23@gmail.com>
 John Hurdle <johnhurdle23@gmail.com>
 secrettoad <johnhurdle23@gmail.com>
