@@ -32,6 +32,7 @@ six==1.16.0
 sphinx-click==3.0.1
 toolz==0.11.1
 typing-extensions==3.10.0.0
+twine==3.4.2
 urllib3==1.26.6
 wrapt==1.12.1
 wheel==0.37.0
