@@ -2,20 +2,25 @@
 name = divina
 author = Coysu Consulting
 author-email = john@coysu.com
+long_description = file: README.md
+long_description_content_type = text/markdown
 summary = Package for causal, scalable forecasting
-description-file = README.md
 home-page = https://www.coysu.com
-license = BSD-3
+license = BSD-3-Clause
+license_file = LICENSE
 classifier =
-    Development Status :: 4 - Beta
+    Development Status :: 3 - Alpha
     Environment :: Console
-    Intended Audience :: Developers
-    Intended Audience :: Information Technology
     Operating System :: OS Independent
     Programming Language :: Python
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+project_urls =
+    Bug Tracker = https://github.com/secrettoad/divina/issues
+    Documentation = https://secrettoad.github.io/divina/
+    Source Code = https://github.com/secrettoad/divina
 keywords =
-    setup
-    distutils
+    forecasting
 [entry_points]
 console_scripts =
     divina = divina.cli.cli:divina
